--- a/eureka_config.yml
+++ b/eureka_config.yml
@@ -1,32 +1,42 @@
-spring:
-  profiles:
-    active:
-    - dev
 ---
 server:
-  port: 2004
+  port: 2001
   context-path: /
-spring:
-  profiles: dev
 eureka:
   instance:
-    hostname: localhost
+    hostname: eureka2001.xiaoyang.com
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://eureka2002.xiaoyang.com:2002/eureka/,http://eureka2003.xiaoyang.com:2003/eureka/
+spring:
+  profiles: eureka2001
 ---
 server:
-  port: 2005
+  port: 2002
   context-path: /
-spring:
-  profiles: test
 eureka:
   instance:
-    hostname: localhost
+    hostname: eureka2002.xiaoyang.com
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://eureka2001.xiaoyang.com:2001/eureka/,http://eureka2003.xiaoyang.com:2003/eureka/
+spring:
+  profiles: eureka2002
+---
+server:
+  port: 2003
+  context-path: /
+eureka:
+  instance:
+    hostname: eureka2003.xiaoyang.com
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://eureka2001.xiaoyang.com:2001/eureka/,http://eureka2002.xiaoyang.com:2002/eureka/
+spring:
+  profiles: eureka2003
