--- a/eureka_config.yml
+++ b/eureka_config.yml
@@ -1,42 +1,32 @@
+spring:
+  profiles:
+    active:
+    - dev
 ---
 server:
-  port: 2001
+  port: 2004
   context-path: /
+spring:
+  profiles: dev
 eureka:
   instance:
-    hostname: eureka2001.xiaoyang.com
+    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://eureka2002.xiaoyang.com:2002/eureka/,http://eureka2003.xiaoyang.com:2003/eureka/
-spring:
-  profiles: eureka2001
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 ---
 server:
-  port: 2002
+  port: 2005
   context-path: /
+spring:
+  profiles: test
 eureka:
   instance:
-    hostname: eureka2002.xiaoyang.com
+    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://eureka2001.xiaoyang.com:2001/eureka/,http://eureka2003.xiaoyang.com:2003/eureka/
-spring:
-  profiles: eureka2002
----
-server:
-  port: 2003
-  context-path: /
-eureka:
-  instance:
-    hostname: eureka2003.xiaoyang.com
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://eureka2001.xiaoyang.com:2001/eureka/,http://eureka2002.xiaoyang.com:2002/eureka/
-spring:
-  profiles: eureka2003
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
