--- a/eureka_config.yml
+++ b/eureka_config.yml
@@ -1,7 +1,7 @@
 spring:
   profiles:
     active:
-    - dev
+    - dev，eureka2002
 ---
 server:
   port: 2004
@@ -16,6 +16,20 @@ eureka:
     fetch-registry: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+---
+server:
+  port: 2002
+  context-path: /
+eureka:
+  instance:
+    hostname: eureka2002.xiaoyang.com
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://eureka2001.xiaoyang.com:2001/eureka/,http://eureka2003.xiaoyang.com:2003/eureka/
+spring:
+  profiles: eureka2002
 ---
 server:
   port: 2005
