--- a/eureka_config.yml
+++ b/eureka_config.yml
@@ -15,7 +15,7 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://localhost:2004/eureka/,http://localhost:2005/eureka/
 ---
 server:
   port: 2005
@@ -29,4 +29,4 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://localhost:2004/eureka/,http://localhost:2005/eureka/
