--- a/eureka_config-dev.yml
+++ b/eureka_config-dev.yml
@@ -1,13 +1,13 @@
 spring:
   profiles:
     active:
-     dev,test
+     test
 ---
 server:
   port: 2004
   context-path: /
 spring:
-  profiles: dev
+  profiles: eureka2004
 eureka:
   instance:
     hostname: localhost
@@ -21,7 +21,7 @@ server:
   port: 2005
   context-path: /
 spring:
-  profiles: dev
+  profiles: eureka2004
 eureka:
   instance:
     hostname: localhost
