--- a/eureka_config-dev.yml
+++ b/eureka_config-dev.yml
@@ -1,7 +1,7 @@
 spring:
   profiles:
     active:
-     test
+     eureka2005
 ---
 server:
   port: 2004
@@ -21,7 +21,7 @@ server:
   port: 2005
   context-path: /
 spring:
-  profiles: eureka2004
+  profiles: eureka2005
 eureka:
   instance:
     hostname: localhost
