--- a/eureka_config.yml
+++ b/eureka_config.yml
@@ -1,7 +1,7 @@
 spring:
   profiles:
     active:
-     eureka2004
+     dev
 ---
 server:
   port: 2004
@@ -21,7 +21,7 @@ server:
   port: 2005
   context-path: /
 spring:
-  profiles: dev
+  profiles: test
 eureka:
   instance:
     hostname: localhost
